# Subtitler-VideoPlayer-App

./: .cursorrules  .gitignore  API_KEY_INFO.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  PROJECT_COMPLETE.md  PUBLISHING.md  README.md  SUBTITLE_LOADING_IMPROVEMENTS.md  TESTING_GUIDE.md  TIMING_TRANSLATION_FEATURES.md  TRANSLATION_CANCEL_FEATURE.md  TRANSLATION_OPTIMIZATION.md  TRANSLATION_PROGRESS_BAR.md  TRANSLATION_SETUP_COMPLETE.md  install-translation.sh  install.sh  launch.py  main.py  push-to-github.sh  pyproject.toml  requirements-full.txt  requirements.txt  run.sh  snapcraft.yaml  stream (1).m3u8  test_hardware.py  test_indicator.py  verify_installation.py
.github/: copilot-instructions.md
docs/: ANDROID_NETFLIX_REDESIGN_COMPLETE.md  ANDROID_TEST_RESULTS.md  HARDWARE_OPTIMIZATION_COMPLETE.md  NETWORK_CASTING_ROADMAP.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  SESSION_COMPLETE.md  SIDEBAR_AND_ORGANIZATION_COMPLETE.md  STREAMING_CLIENTS_GUIDE.md  STREAMING_CLIENTS_PLAN.md  TRANSLATION_FIX_COMPLETE.md  VENV_FIX_COMPLETE.md
logs/: streaming_events.jsonl  streaming_stats.json
scripts/: build-android-client.sh  create-desktop-entry.sh  deploy-clients.sh  ensure-player-running.sh  install-vidaadev.sh  install.sh  package-vidaa-client.sh  push-to-github.sh  sign-android-apk.sh  start-hls-stream.sh
src/: ai_subtitle_dialog.py  ai_subtitle_generator.py  background_task_manager.py  casting_manager.py  config_manager.py  debug_logger.py  ffmpeg_casting_manager.py  opensubtitles_api.py  stats_footer.py  (+10 more)
(+62 files in other folders)
